# raycaster

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-coverage.yml
examples/: cast.py  clock.py  projectile.py
raycaster/: canvas.py  matrix.py  ray.py  transformation.py  vector.py
src/: canvas.py  clock.py  projectile.py  vector.py
src/raycaster/: canvas.py  matrix.py  ray.py  transformation.py  vector.py
tests/: test_canvas.py  test_lighting.py  test_matrix.py  test_ray.py  test_transformation.py  test_vector.py
