[tool.poetry]
name = "raycaster"
version = "0.1.0"
description = ""
authors = ["wookie184 <wookie1840@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.0.0"
poethepoet = "^0.12.0"
pre-commit = "^2.17.0"

[tool.poe.tasks]
test = "coverage run -m pytest"
_report = "coverage report -m"
_gen_html = "coverage html"
_show_html = 'python -m webbrowser "file://${POE_ROOT}/htmlcov/index.html"'
coverage = ["test", "_report"]
html = ["_gen_html", "_show_html"]
format = "pre-commit run"
precommit = "pre-commit install"

[tool.coverage.run]
source = ["src/raycaster"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
